Criando os Departamentos

--- a/ControleDeVendas/appsettings.json
+++ b/ControleDeVendas/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ControleDeVendasContext": "Server=localhost;userid=melo;password=melo1218;database=vendasdb"
+  }
 }
